- default param for fragment - separate session db - config session in hazelcast - config job to db cluster - i18n by session, cookie

--- a/demo-communication-web/src/main/resources/i18n/msg_vi.properties
+++ b/demo-communication-web/src/main/resources/i18n/msg_vi.properties
@@ -2,3 +2,7 @@ nav.home=Trang ch\u1EE7
 nav.product=S\u1EA3n ph\u1EA9m
 nav.about=Gi\u1EDBi thi\u1EC7u
 nav.logout=\u0110\u0103ng xu\u1EA5t
+login.title=\u0110\u0102NG NH\u1EACP
+login.username=T\u00EAn t\u00E0i kho\u1EA3n
+login.password=M\u1EADt kh\u1EA9u
+login.submit=\u0110\u0103ng nh\u1EADp
