--- a/demo-communication-web/src/main/resources/i18n/msg.properties
+++ b/demo-communication-web/src/main/resources/i18n/msg.properties
@@ -2,3 +2,7 @@ nav.home=Home
 nav.product=Product
 nav.about=About
 nav.logout=Logout
+login.title=LOGIN
+login.username=Username
+login.password=Password
+login.submit=Login
