- change to thymeleaf layout - change log to log4j2 - config java session to db, change session id name, cache user - resolve i18n

--- a/demo-communication-web/src/main/resources/i18n/msg.properties
+++ b/demo-communication-web/src/main/resources/i18n/msg.properties
@@ -6,3 +6,9 @@ login.title=LOGIN
 login.username=Username
 login.password=Password
 login.submit=Login
+ws.chooseANickname=Choose a nickname
+ws.to=To
+ws.connect=Connect
+ws.disconnect=Disconnect
+ws.send=Send
+ws.writeAMessage=Write a message...
