--- a/demo-communication-web/src/main/resources/i18n/msg_en.properties
+++ b/demo-communication-web/src/main/resources/i18n/msg_en.properties
@@ -6,3 +6,9 @@ login.title=LOGIN
 login.username=Username
 login.password=Password
 login.submit=Login
+ws.chooseANickname=Choose a nickname
+ws.to=To
+ws.connect=Connect
+ws.disconnect=Disconnect
+ws.send=Send
+ws.writeAMessage=Write a message...
