--- a/demo-communication-web/src/main/resources/i18n/msg_en.properties
+++ b/demo-communication-web/src/main/resources/i18n/msg_en.properties
@@ -1,5 +1,5 @@
 nav.home=Home
-nav.product=Product
+nav.chat=Chat
 nav.about=About
 nav.logout=Logout
 login.title=LOGIN
@@ -8,7 +8,9 @@ login.password=Password
 login.submit=Login
 ws.chooseANickname=Choose a nickname
 ws.to=To
+ws.username=Username
 ws.connect=Connect
 ws.disconnect=Disconnect
 ws.send=Send
 ws.writeAMessage=Write a message...
+ws.selectFile=Choose file
