--- a/demo-communication-web/src/main/resources/i18n/msg_vi.properties
+++ b/demo-communication-web/src/main/resources/i18n/msg_vi.properties
@@ -1,5 +1,6 @@
 nav.home=Trang ch\u1EE7
 nav.chat=Chat
+nav.media=Media
 nav.about=Gi\u1EDBi thi\u1EC7u
 nav.logout=\u0110\u0103ng xu\u1EA5t
 login.title=\u0110\u0102NG NH\u1EACP
